--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br" class="w-full h-full">
   <head>
     <meta charset="UTF-8" />
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rotinize</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-gray-100 dark:bg-dark-200 w-full h-full">
+    <div id="root" class="h-full w-full"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
